fix slider overflow

--- a/src/style.css
+++ b/src/style.css
@@ -117,7 +117,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
 }
 
 #filter-menue{
-    margin-top: 100px;
+    /*margin-top: 100px;*/
 }
 
 .wd-red{
